[package]
name = "packet-alert"
description = "A simple project that pings the user each time a new connection stream is detected or a stream gets silent."
authors = ["Ashwin Belbase <ashwinbelbase@gmail.com>"]
repository = "https://github.com/shad0wcrawl3r/packet-alert.git"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.23"
pnet = { version = "0.31.0", features = ["pnet_datalink"] }
pnet_datalink = "0.31.0"
reqwest = "0.11.13"
